# typescript/src/apis/LayersApi.ts
@@ -20,6 +20,8 @@ import type {
   AddLayerCollection,
   Layer,
   LayerCollection,
+  ProviderCapabilities,
+  SearchType,
   TaskResponse,
 } from '../models/index';
 import {
@@ -33,6 +35,10 @@ import {
     LayerToJSON,
     LayerCollectionFromJSON,
     LayerCollectionToJSON,
+    ProviderCapabilitiesFromJSON,
+    ProviderCapabilitiesToJSON,
+    SearchTypeFromJSON,
+    SearchTypeToJSON,
     TaskResponseFromJSON,
     TaskResponseToJSON,
 } from '../models/index';
@@ -55,6 +61,15 @@ export interface AddExistingLayerToCollectionRequest {
 export interface AddLayerRequest {
     collection: string;
     addLayer: AddLayer;
+}
+
+export interface AutocompleteHandlerRequest {
+    provider: string;
+    collection: string;
+    searchType: SearchType;
+    searchString: string;
+    limit: number;
+    offset: number;
 }
 
 export interface LayerHandlerRequest {
@@ -84,6 +99,10 @@ export interface ListRootCollectionsHandlerRequest {
     limit: number;
 }
 
+export interface ProviderCapabilitiesHandlerRequest {
+    provider: string;
+}
+
 export interface RemoveCollectionRequest {
     collection: string;
 }
@@ -96,6 +115,15 @@ export interface RemoveCollectionFromCollectionRequest {
 export interface RemoveLayerFromCollectionRequest {
     collection: string;
     layer: string;
+}
+
+export interface SearchHandlerRequest {
+    provider: string;
+    collection: string;
+    searchType: SearchType;
+    searchString: string;
+    limit: number;
+    offset: number;
 }
 
 /**
@@ -280,6 +308,82 @@ export class LayersApi extends runtime.BaseAPI {
      */
     async addLayer(requestParameters: AddLayerRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<AddCollection200Response> {
         const response = await this.addLayerRaw(requestParameters, initOverrides);
+        return await response.value();
+    }
+
+    /**
+     * Autocompletes the search on the contents of the collection of the given provider
+     * Autocompletes the search on the contents of the collection of the given provider
+     */
+    async autocompleteHandlerRaw(requestParameters: AutocompleteHandlerRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<Array<string>>> {
+        if (requestParameters.provider === null || requestParameters.provider === undefined) {
+            throw new runtime.RequiredError('provider','Required parameter requestParameters.provider was null or undefined when calling autocompleteHandler.');
+        }
+
+        if (requestParameters.collection === null || requestParameters.collection === undefined) {
+            throw new runtime.RequiredError('collection','Required parameter requestParameters.collection was null or undefined when calling autocompleteHandler.');
+        }
+
+        if (requestParameters.searchType === null || requestParameters.searchType === undefined) {
+            throw new runtime.RequiredError('searchType','Required parameter requestParameters.searchType was null or undefined when calling autocompleteHandler.');
+        }
+
+        if (requestParameters.searchString === null || requestParameters.searchString === undefined) {
+            throw new runtime.RequiredError('searchString','Required parameter requestParameters.searchString was null or undefined when calling autocompleteHandler.');
+        }
+
+        if (requestParameters.limit === null || requestParameters.limit === undefined) {
+            throw new runtime.RequiredError('limit','Required parameter requestParameters.limit was null or undefined when calling autocompleteHandler.');
+        }
+
+        if (requestParameters.offset === null || requestParameters.offset === undefined) {
+            throw new runtime.RequiredError('offset','Required parameter requestParameters.offset was null or undefined when calling autocompleteHandler.');
+        }
+
+        const queryParameters: any = {};
+
+        if (requestParameters.searchType !== undefined) {
+            queryParameters['searchType'] = requestParameters.searchType;
+        }
+
+        if (requestParameters.searchString !== undefined) {
+            queryParameters['searchString'] = requestParameters.searchString;
+        }
+
+        if (requestParameters.limit !== undefined) {
+            queryParameters['limit'] = requestParameters.limit;
+        }
+
+        if (requestParameters.offset !== undefined) {
+            queryParameters['offset'] = requestParameters.offset;
+        }
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        if (this.configuration && this.configuration.accessToken) {
+            const token = this.configuration.accessToken;
+            const tokenString = await token("session_token", []);
+
+            if (tokenString) {
+                headerParameters["Authorization"] = `Bearer ${tokenString}`;
+            }
+        }
+        const response = await this.request({
+            path: `/layers/collections/search/autocomplete/{provider}/{collection}`.replace(`{${"provider"}}`, encodeURIComponent(String(requestParameters.provider))).replace(`{${"collection"}}`, encodeURIComponent(String(requestParameters.collection))),
+            method: 'GET',
+            headers: headerParameters,
+            query: queryParameters,
+        }, initOverrides);
+
+        return new runtime.JSONApiResponse<any>(response);
+    }
+
+    /**
+     * Autocompletes the search on the contents of the collection of the given provider
+     * Autocompletes the search on the contents of the collection of the given provider
+     */
+    async autocompleteHandler(requestParameters: AutocompleteHandlerRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<Array<string>> {
+        const response = await this.autocompleteHandlerRaw(requestParameters, initOverrides);
         return await response.value();
     }
 
@@ -528,6 +632,42 @@ export class LayersApi extends runtime.BaseAPI {
     }
 
     /**
+     */
+    async providerCapabilitiesHandlerRaw(requestParameters: ProviderCapabilitiesHandlerRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<ProviderCapabilities>> {
+        if (requestParameters.provider === null || requestParameters.provider === undefined) {
+            throw new runtime.RequiredError('provider','Required parameter requestParameters.provider was null or undefined when calling providerCapabilitiesHandler.');
+        }
+
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        if (this.configuration && this.configuration.accessToken) {
+            const token = this.configuration.accessToken;
+            const tokenString = await token("session_token", []);
+
+            if (tokenString) {
+                headerParameters["Authorization"] = `Bearer ${tokenString}`;
+            }
+        }
+        const response = await this.request({
+            path: `/layers/{provider}/capabilities`.replace(`{${"provider"}}`, encodeURIComponent(String(requestParameters.provider))),
+            method: 'GET',
+            headers: headerParameters,
+            query: queryParameters,
+        }, initOverrides);
+
+        return new runtime.JSONApiResponse(response, (jsonValue) => ProviderCapabilitiesFromJSON(jsonValue));
+    }
+
+    /**
+     */
+    async providerCapabilitiesHandler(requestParameters: ProviderCapabilitiesHandlerRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<ProviderCapabilities> {
+        const response = await this.providerCapabilitiesHandlerRaw(requestParameters, initOverrides);
+        return await response.value();
+    }
+
+    /**
      * Remove a collection
      * Remove a collection
      */
@@ -650,6 +790,82 @@ export class LayersApi extends runtime.BaseAPI {
      */
     async removeLayerFromCollection(requestParameters: RemoveLayerFromCollectionRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<void> {
         await this.removeLayerFromCollectionRaw(requestParameters, initOverrides);
+    }
+
+    /**
+     * Searches the contents of the collection of the given provider
+     * Searches the contents of the collection of the given provider
+     */
+    async searchHandlerRaw(requestParameters: SearchHandlerRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<LayerCollection>> {
+        if (requestParameters.provider === null || requestParameters.provider === undefined) {
+            throw new runtime.RequiredError('provider','Required parameter requestParameters.provider was null or undefined when calling searchHandler.');
+        }
+
+        if (requestParameters.collection === null || requestParameters.collection === undefined) {
+            throw new runtime.RequiredError('collection','Required parameter requestParameters.collection was null or undefined when calling searchHandler.');
+        }
+
+        if (requestParameters.searchType === null || requestParameters.searchType === undefined) {
+            throw new runtime.RequiredError('searchType','Required parameter requestParameters.searchType was null or undefined when calling searchHandler.');
+        }
+
+        if (requestParameters.searchString === null || requestParameters.searchString === undefined) {
+            throw new runtime.RequiredError('searchString','Required parameter requestParameters.searchString was null or undefined when calling searchHandler.');
+        }
+
+        if (requestParameters.limit === null || requestParameters.limit === undefined) {
+            throw new runtime.RequiredError('limit','Required parameter requestParameters.limit was null or undefined when calling searchHandler.');
+        }
+
+        if (requestParameters.offset === null || requestParameters.offset === undefined) {
+            throw new runtime.RequiredError('offset','Required parameter requestParameters.offset was null or undefined when calling searchHandler.');
+        }
+
+        const queryParameters: any = {};
+
+        if (requestParameters.searchType !== undefined) {
+            queryParameters['searchType'] = requestParameters.searchType;
+        }
+
+        if (requestParameters.searchString !== undefined) {
+            queryParameters['searchString'] = requestParameters.searchString;
+        }
+
+        if (requestParameters.limit !== undefined) {
+            queryParameters['limit'] = requestParameters.limit;
+        }
+
+        if (requestParameters.offset !== undefined) {
+            queryParameters['offset'] = requestParameters.offset;
+        }
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        if (this.configuration && this.configuration.accessToken) {
+            const token = this.configuration.accessToken;
+            const tokenString = await token("session_token", []);
+
+            if (tokenString) {
+                headerParameters["Authorization"] = `Bearer ${tokenString}`;
+            }
+        }
+        const response = await this.request({
+            path: `/layers/collections/search/{provider}/{collection}`.replace(`{${"provider"}}`, encodeURIComponent(String(requestParameters.provider))).replace(`{${"collection"}}`, encodeURIComponent(String(requestParameters.collection))),
+            method: 'GET',
+            headers: headerParameters,
+            query: queryParameters,
+        }, initOverrides);
+
+        return new runtime.JSONApiResponse(response, (jsonValue) => LayerCollectionFromJSON(jsonValue));
+    }
+
+    /**
+     * Searches the contents of the collection of the given provider
+     * Searches the contents of the collection of the given provider
+     */
+    async searchHandler(requestParameters: SearchHandlerRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<LayerCollection> {
+        const response = await this.searchHandlerRaw(requestParameters, initOverrides);
+        return await response.value();
     }
 
 }
