# typescript/src/models/SearchTypes.ts
@@ -1,0 +1,75 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Geo Engine Pro API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.7.0
+ * Contact: dev@geoengine.de
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface SearchTypes
+ */
+export interface SearchTypes {
+    /**
+     * 
+     * @type {boolean}
+     * @memberof SearchTypes
+     */
+    fulltext: boolean;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof SearchTypes
+     */
+    prefix: boolean;
+}
+
+/**
+ * Check if a given object implements the SearchTypes interface.
+ */
+export function instanceOfSearchTypes(value: object): boolean {
+    let isInstance = true;
+    isInstance = isInstance && "fulltext" in value;
+    isInstance = isInstance && "prefix" in value;
+
+    return isInstance;
+}
+
+export function SearchTypesFromJSON(json: any): SearchTypes {
+    return SearchTypesFromJSONTyped(json, false);
+}
+
+export function SearchTypesFromJSONTyped(json: any, ignoreDiscriminator: boolean): SearchTypes {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'fulltext': json['fulltext'],
+        'prefix': json['prefix'],
+    };
+}
+
+export function SearchTypesToJSON(value?: SearchTypes | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'fulltext': value.fulltext,
+        'prefix': value.prefix,
+    };
+}
+
