# typescript/src/models/index.ts
@@ -140,6 +140,7 @@ export * from './ProjectVersion';
 export * from './Provenance';
 export * from './ProvenanceEntry';
 export * from './ProvenanceOutput';
+export * from './ProviderCapabilities';
 export * from './ProviderLayerCollectionId';
 export * from './ProviderLayerId';
 export * from './Quota';
@@ -163,6 +164,9 @@ export * from './Role';
 export * from './RoleDescription';
 export * from './RunningTaskStatus';
 export * from './STRectangle';
+export * from './SearchCapabilities';
+export * from './SearchType';
+export * from './SearchTypes';
 export * from './ServerInfo';
 export * from './SingleBandRasterColorizer';
 export * from './SpatialPartition2D';
